k8s-new/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: myapp-gateway
  namespace: canary
spec:
  selector:
    istio: ingressgateway # Ensures that this gateway is picked up by the ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*" # Matches any host, useful for internal testing
